<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--app的名字-->
    <string name="app_name">安心取</string>

    <!--menu菜单-->
    <string name="contact">联系</string>
    <string name="feedback">反馈</string>
    <string name="camera">照相</string>

    <!--tab菜单-->
    <string name="scan">扫描</string>
    <string name="trans">运输</string>
    <string name="search">查询</string>
    <string name="person">个人</string>

    <!--search tab 菜单-->
    <string name="search_logistic">查询物流</string>
    <string name="select_logistics">选择物流:</string>
    <string name="order_no">订单号:</string>
    <string name="order_password">订单密码:</string>
    <string name="search_btn">查询</string>
    <string name="the_true_information">真实信息：</string>
    <string name="show_result">结果显示：</string>



    <!--express select下拉菜单目录-->
    <string-array name="home_list">
        <item>S.F.Express</item>
        <item>ZTO Express</item>
        <item>Express Mail Service</item>
        <item>YTO Express</item>
        <item>YUNDA Express</item>
    </string-array>

    <!--scan tab 界面提醒-->
    <string name="qrscan_text">请对准二维码进行扫描即可！\n使用请务必确保连接蓝牙！</string>
    <string name="check_toast">已经确认由本人收件完成！</string>


    <!--trans tab 菜单-->
    <string name="Id">编号：</string>
    <string name="shipper_info">寄件信息：</string>
    <string name="person_from">寄件人:</string>
    <string name="From">发送地:</string>
    <string name="area_code_from">区号:</string>
    <string name="tel_from">电话:</string>
    <string name="considnee_info">收件信息</string>
    <string name="preson_to">收件人:</string>
    <string name="to">目的地:</string>
    <string name="area_code_to">区号:</string>
    <string name="tel_to">电话:</string>
    <string name="logistics_info">物流信息:</string>
    <string name="logistics_type">物流种类:</string>
    <string name="descrip_of_good">寄件品种:</string>
    <string name="quantity">数量:</string>
    <string name="freight">运费:</string>
    <string name="pay_of_charge">付费方式：</string>
    <string name="shipment_type">运送方式：</string>
    <string name="courier_info">快递员信息</string>
    <string name="picked_by">收件人:</string>
    <string name="delieved_by">送件人:</string>
    <string name="pick_date">寄件时间:</string>
    <string name="Isreturn">是否收件：</string>
    <string name="post">提交</string>

    <!--trans_付费方式下拉菜单-->
    <string-array name="Payment_of_Charge">
        <item>Shipper</item>
        <item>Consignee</item>
        <item>3th Party</item>
    </string-array>

    <!--trans_运送类型-->
    <string-array name="Shipment_Type">
        <item>Same day</item>
        <item>Cargo</item>
        <item>Four day</item>
    </string-array>

    <!--person tab 菜单-->
    <string name="login_titile">登录界面</string>
    <string name="username">用户名:</string>
    <string name="user_password">密码:</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="login_welcome">您好！\n</string>
    <string name="workingtime">在线时间为:</string>
    <string name="logout_fail">请求超时!</string>


    <!--Toast文字-->
    <string name="search_result">查询结果:</string>
    <string name="text_not_be_empty">信息不能为空！</string>
    <string name="image_not_exist">二维码未生成！</string>
    <string name="image_sucess">二维码成功生成！</string>
    <string name="request_qr_fail">二维码请求失败！</string>
    <string name="request_fail">请求失败！没有这个订单号或者密码错误！</string>
    <string name="login_fail">请求失败！没有这个账户！</string>
    <string name="password_error">密码错误！</string>
    <string name="login_succeed_toast">登陆成功！</string>
    <string name="NetWorkTimeOut">网络不可用！请检查！</string>

    <!--  BluetoothChat -->
    <string name="not_connected">你并没有连上一个蓝牙设备！</string>
    <string name="bt_not_enabled_leaving">蓝牙不可用，请核对！</string>
    <string name="title_connecting">蓝牙连接中....</string>
    <string name="title_connected_to">蓝牙连接: </string>
    <string name="title_not_connected">蓝牙未连接设备</string>

    <!--  DeviceListActivity -->
    <string name="scanning">扫描设备中...</string>
    <string name="select_device">选择一个设备进行连接</string>
    <string name="none_paired">没有设备被匹配</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">已匹配设备</string>
    <string name="title_other_devices">其他可匹配设备</string>
    <string name="button_scan">搜索设备</string>

    <!-- Options Menu -->
    <string name="connect">连接蓝牙</string>
    <string name="discoverable">允许设备可见</string>


</resources>