<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trans_scro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroud_white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/trans_padding_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipper_info"
                android:textSize="@dimen/trans_sub_title_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_from" />

            <EditText
                android:id="@+id/person_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/From" />

            <EditText
                android:id="@+id/From"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_code_from" />

            <EditText
                android:id="@+id/Area_Code_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_from" />

            <EditText
                android:id="@+id/Tel_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/trans_padding_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/considnee_info"
                android:textSize="@dimen/trans_sub_title_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preson_to" />

            <EditText
                android:id="@+id/Preson_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <EditText
                android:id="@+id/To"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_code_to" />

            <EditText
                android:id="@+id/Area_Code_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_to" />

            <EditText
                android:id="@+id/Tel_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/trans_padding_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logistics_info"
                android:textSize="@dimen/trans_sub_title_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left"
            android:paddingTop="@dimen/trans_padding_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logistics_type" />

            <Spinner
                android:id="@+id/Logistics_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/home_list">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descrip_of_good" />

            <EditText
                android:id="@+id/Description_Of_Goods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freight" />

            <EditText
                android:id="@+id/Freight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_of_charge" />

            <Spinner
                android:id="@+id/Payment_of_Charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/Payment_of_Charge">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipment_type" />

            <Spinner
                android:id="@+id/Shipment_Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/Shipment_Type">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/trans_padding_top"
                android:text="@string/courier_info"
                android:textSize="@dimen/trans_sub_title_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picked_by" />

            <EditText
                android:id="@+id/Pickup_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/trans_padding_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delieved_by" />

            <EditText
                android:id="@+id/Delieved_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/trans_padding_top">

            <Button
                android:id="@+id/trans_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"></Button>
        </LinearLayout>


    </LinearLayout>

</ScrollView>